# reviv

./: '  .#TODO.org  .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  Game_Ideas.org  NO_CMakeLists.txt  README.md  README.org  TODO.org  a  compile.sh  dependencies.org  install.sh  iz  izlaz  main.cpp
cmake/: CompilerWarnings.cmake  CrossCompile.cmake  StandardProjectSettings.cmake
resources/shaders/: instanced.vs  mono_chroma.fs  texture.vs
reviv/: CMakeLists.txt
reviv/src/: main.cpp  reviv.h  rv_pch.hpp
reviv/src/core/: application.cpp  application.h  base.h  entry_point.h  file_manager.cpp  file_manager.h  input.cpp  input.h  keycodes.h  mat.cpp  mat.h  memory_manager.h  random_manager.cpp  random_manager.h  time.cpp  time.h
reviv/src/event/: dispatcher.h  event.h
reviv/src/events/: dispatcher.h  event.h
reviv/src/game_stuff/: game_stuff_manager.cpp  game_stuff_manager.h  weather.cpp  weather.h
reviv/src/physics/: collision.cpp  collision.h  collision_manager.cpp  collision_manager.h  constraint.cpp  constraint.h  dynamics_manager.cpp  dynamics_manager.h  gjk_epa.cpp  gjk_epa.h  physics_manager.cpp  physics_manager.h  rigidbody.cpp  rigidbody.h
reviv/src/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  deffered.cpp  deffered.h  environment.cpp  environment.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model_loader.cpp  model_loader.h  modelloader.cpp  render_command.cpp  render_command.h  render_manager.cpp  render_manager.h  shader.cpp  shader.h  shader_uniform_map.cpp  shader_uniform_map.h  skybox.cpp  skybox.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h
reviv/src/scene/: asset_manager.cpp  asset_manager.h  component.cpp  component_specialization.cpp  component_specialization.h  components.cpp  components.h  entity.cpp  entity.h  scene.cpp  scene.h  transform_component.h
reviv/src/stls/: random.cpp  random.h  stable_vector.h
sandbox/: CMakeLists.txt  configure.sh
sandbox/assets/models/: capsule.glb  cube.fbx  cube.glb  cylinder.glb  dodik.glb  hexagon.glb  sphere.fbx  star.glb  torus.glb
sandbox/assets/models/source/: Heart.FBX
sandbox/assets/shaders/: blend.fs  blend.vs  cubemap.fs  cubemap.vs  deffered.fs  deffered.vs  deffered_blinn_phong.fs  deffered_blinn_phong.vs  deffered_geometry.fs  deffered_geometry.vs  deffered_lighting.fs  depth_test.fs  idk.fs  idk.vs  monochroma.fs  monochroma.vs  monocolor.vs  novfs.txt  omnidirectional_shadow_map.gs  omnidirectional_shadow_map.vs  omnidirectional_shadow_map_6times.fs  omnidirectional_shadow_map_6times.vs  phong.fs  phong.vs  screen_framebuffer.fs  screen_framebuffer.vs  shadow_map.vs  skybox.fs  test.vs  texture.fs  texture.vs
sandbox/assets/shaders/obsolete/: test.fs
sandbox/src/: sandbox.cpp
scripts/: Build-Release-Windows.bat  build.sh  configure.sh  run.sh
src/: izlaz  main.cpp  reviv.h
src/core/: basic_components.h  entity.cpp  entity.h  file_manager.cpp  file_manager.h  hid.cpp  hid.h  mat.cpp  mat.h  memory_manager.h  random_manager.cpp  random_manager.h  types.h
src/entity/: entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  player.cpp  player.h
src/physics/: physics_manager.cpp  physics_manager.h  physics_sim.cpp  physics_sim.h
src/renderer/: OBSOLETE_opengl_assert.h  buffer.cpp  buffer.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  material.cpp  material.h  modelloader.cpp  modelloader.h  render_command.cpp  render_command.h  render_manager.cpp  render_manager.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h
src/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h
src/stls/: stable_vector.h
